Bug 416551 Cannot use IME on rich formatting editor of gmail (design mode) r+sr=roc, b1.9=dsicore